# agent-sessions-backup

./: .gitignore  README.md
.github/workflows/: ci.yml
client/: pyproject.toml
client/src/agent_sessions_client/: __init__.py  cli.py  config.py  endpoints.py  http.py  models.py  report.py
client/tests/: conftest.py  fake_hub.py  test_cli.py  test_config.py  test_endpoints.py  test_http.py  test_models.py  test_report.py
collector/: pyproject.toml
collector/src/agent_collector/: cli.py  config.py  run.py  scanner.py  state.py  transport.py
collector/src/agent_collector/schedule/: __init__.py  systemd.py  taskscheduler.py
collector/src/agent_collector/webcapture/: __init__.py  cdp.py  chatgpt.py  claude.py  result.py
collector/tests/: conftest.py  fake_hub.py  test_cli.py  test_config.py  test_multipart.py  test_run.py  test_scanner.py  test_schedule.py  test_state.py  test_transport.py  test_webcapture.py
docs/: agents-api.md
hub/: package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.jsonc  wrangler.oidc-issuer.jsonc  wrangler.preview-front-door.jsonc  wrangler.telemetry-gateway.jsonc
hub/gateway/: oidc-issuer.ts  oidc-sign.ts  otlp-protobuf.ts  preview-front-door.ts  telemetry-gateway.ts
hub/migrations/: 0001_init.sql  0002_blocks_on_main_path.sql  0003_webauthn_challenges.sql  0004_multipart_uploads.sql  0005_cert_rotation.sql  (+8 more)
memory/: MEMORY.md  alert-kql-manual-apply.md  codex-review-trigger.md  d1-invocation-limits.md  deploy-migrations-gap.md  machine-inventory.md  project-decisions.md  session-title-sql-size-limit.md  usage.jsonl  workflow-subagents.md
scripts/: generate-gateway-key.mjs  seed-local.mjs  verify-corpus.mjs
(+92 files in other folders)
